<resources>
    <string name="app_name">CoffeeNative</string>

    <string name="statistics_tab_text_placeholder">Hey dude, welcome to statistic</string>
    <string name="history_tab_text_placeholder">Hello Buddy, welcome to history screen</string>
    <string name="products_tab_text_placeholder">My nigga nice to see ya on home screen! \nNice cock btw</string>

    <string name="products_tab_title">Products</string>
    <string name="history_tab_title">History</string>
    <string name="statistics_tab_title">Statistics</string>

    <string name="product_item_title_placeholder">Latte machiato</string>
    <string name="product_item_price_placeholder">15</string>

    <string name="product_item_content_description">cup of tea or coffee</string>

    <string name="order_item_number_title">Заказ №:</string>
    <string name="order_item_number">999</string>
    <string name="order_item_time_title">Время:</string>
    <string name="order_item_time">19.02.20 20:15</string>
    <string name="order_item_time_pattern">dd.MM.yyyy HH:mm</string>
    <string name="order_item_total_price">Общая стоимость:</string>
    <string name="order_item_product_header">Наименование:</string>
    <string name="order_item_price_header">Стоимость:</string>

    <string name="cart_title">Корзина</string>
    <string name="product_title">Информация о товаре</string>

</resources>
